--- a/RedBox/Content/Site.css
+++ b/RedBox/Content/Site.css
@@ -15,3 +15,95 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.navbar-header {
+    background: #d32f2f;
+    float: none;
+}
+
+.navbar-brand {
+	border: medium none;
+	color: #fff;
+	cursor: pointer;
+	font-family: "Roboto";
+	font-size: 2em;
+	font-variant: small-caps;
+	font-weight: bold;
+	line-height: 50px;
+	padding: 0px;
+	text-transform: none;
+}
+
+.navbar-brand:hover {
+	color: #fff;
+}
+
+.navbar-collapse {
+    background: #f44336;
+}
+
+.navbar-nav {
+    border: none;
+    padding-left: 51px;
+}
+
+.navbar-nav li a {
+	background: transparent none repeat scroll 0% 0%;
+	border-radius: 0;
+	border: none;
+	color: rgba(255, 255, 255, 0.75);
+	font-family: "Roboto";
+	font-size: 13px;
+	font-weight: 500;
+	line-height: 50px;
+	margin: 0;
+	padding: 5px 20px 4px;
+	text-transform: uppercase;
+	transition: all 0.2s ease 0s;
+}
+
+.nav > li.active > a, .nav > li > a:hover, .nav > li.active > a:hover, .nav > li.active > a:focus {
+    background: rgba(0, 0, 0, 0.1) none repeat scroll 0% 0%;
+    border-radius: 0;
+    border: none;
+    color: #fff;
+}
+
+.changer {
+    background: rgba(0,0,0,.2);
+    border: none;
+    color: rgba(255,255,255,.67);
+    float: left;
+    height: 51px;
+    margin-right: 16px;
+    position: relative;
+    text-align: center;
+    width: 51px;
+}
+
+.changer ul {
+    background: #00897b;
+    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.3);
+    display: none;
+    font-size: 14px;
+    font-variant: small-caps;
+    font-weight: 500;
+    left: 0;
+    list-style-type: none;
+    padding: 0;
+    position: absolute;
+    text-align: left;
+    top: 51px;
+    width: 200px;
+    z-index: 100;
+}
+
+.changer > div {
+    background: url(Images/m_logo.png) center center no-repeat;
+    background-size: contain;
+    font-size: 20px;
+    font-weight: 500;
+    height: 51px;
+    opacity: 0.67;
+    width: 51px;
+}
