--- a/RedBox/Views/Shared/_Layout.cshtml
+++ b/RedBox/Views/Shared/_Layout.cshtml
@@ -15,8 +15,9 @@
             <div class="changer">
                 <div></div>
                 <ul>
+                    <li class="active"><a href="http://www2.techromix.com:85">Redbox</a></li>
                     <li><a href="http://www2.techromix.com:85">Timesheet</a></li>
-                    <li class="active"><a href="http://www2.techromix.com:1006">Evaluation</a></li>
+                    <li><a href="http://www2.techromix.com:1006">Evaluation</a></li>
                     <li><a href="http://blog.techromix.com">Blog</a></li>
                     <li><a target="_blank" href="https://sites.google.com/a/techromix.com/internal-site/">Google Site <span class="fa fa-external-link"></span></a></li>
                     <li><a target="_blank" href="https://sites.google.com/a/techromix.com/dev/">Dev Team <span class="fa fa-external-link"></span></a></li>
