- adjust namespace and connect to the DB

--- a/RedBox/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/RedBox/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,6 +1,5 @@
 @using System.Web.Http
-@using RedBox.Areas.HelpPage.Models
-@model HelpPageApiModel
+@model RedBox.Web.Areas.HelpPage.Models.HelpPageApiModel
 
 @{
     var description = Model.ApiDescription;
