--- a/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,8 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
-@using RedBox.Areas.HelpPage
-@using RedBox.Areas.HelpPage.Models
+@using RedBox.Web.Areas.HelpPage
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
