--- a/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,8 +1,6 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using RedBox.Areas.HelpPage.Models
-@using RedBox.Areas.HelpPage.ModelDescriptions
-@model HelpPageApiModel
+@model RedBox.Web.Areas.HelpPage.Models.HelpPageApiModel
 
 @{
     ApiDescription description = Model.ApiDescription;
