--- a/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
+++ b/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
@@ -1,4 +1,3 @@
-@using RedBox.Areas.HelpPage
-@model ImageSample
+@model RedBox.Web.Areas.HelpPage.SampleGeneration.ImageSample
 
 <img src="@Model.Src" />
