--- a/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,5 +1,4 @@
-@using RedBox.Areas.HelpPage
-@model InvalidSample
+@model RedBox.Web.Areas.HelpPage.SampleGeneration.InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
 {
