--- a/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
+++ b/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
@@ -1,3 +1,2 @@
-@using RedBox.Areas.HelpPage.ModelDescriptions
-@model SimpleTypeModelDescription
+@model RedBox.Web.Areas.HelpPage.ModelDescriptions.SimpleTypeModelDescription
 @Model.Documentation
