--- a/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
+++ b/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
@@ -1,5 +1,4 @@
-@using RedBox.Areas.HelpPage
-@model TextSample
+@model RedBox.Web.Areas.HelpPage.SampleGeneration.TextSample
 
 <pre class="wrapped">
 @Model.Text
