--- a/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
+++ b/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
@@ -1,5 +1,5 @@
-@using RedBox.Areas.HelpPage.ModelDescriptions
-@model CollectionModelDescription
+@using RedBox.Web.Areas.HelpPage.ModelDescriptions
+@model RedBox.Web.Areas.HelpPage.ModelDescriptions.CollectionModelDescription
 @if (Model.ElementDescription is ComplexTypeModelDescription)
 {
     @Html.DisplayFor(m => m.ElementDescription)
