--- a/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
+++ b/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
@@ -1,3 +1,2 @@
-@using RedBox.Areas.HelpPage.ModelDescriptions
-@model ComplexTypeModelDescription
+@model RedBox.Web.Areas.HelpPage.ModelDescriptions.ComplexTypeModelDescription
 @Html.DisplayFor(m => m.Properties, "Parameters")
