--- a/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
+++ b/RedBox/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
@@ -1,5 +1,5 @@
-@using RedBox.Areas.HelpPage.ModelDescriptions
-@model EnumTypeModelDescription
+@using RedBox.Web.Areas.HelpPage.ModelDescriptions
+@model RedBox.Web.Areas.HelpPage.ModelDescriptions.EnumTypeModelDescription
 
 <p>Possible enumeration values:</p>
 
