--- a/RedBox/app/views/Suggestions.html
+++ b/RedBox/app/views/Suggestions.html
@@ -1,17 +1,44 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-	<meta charset="utf-8" />
-</head>
-<body>
-    <section layout="row" layout-sm="column" layout-align="center center" layout-wrap="">
-        <md-button class="md-raised">Button</md-button>
-        <md-button class="md-raised md-primary">Primary</md-button>
-        <md-button ng-disabled="true" class="md-raised md-primary">Disabled</md-button>
-        <md-button class="md-raised md-warn">Warn</md-button>
-        <div class="label">Raised</div>
-    </section>
+﻿<div class="callout-box">
+    <div class="container" >
+        <md-card layout-sm="columns" layout-gt-sm="columns" layout-padding>
+            <md-input-container class="md-block" flex>
+                    <label>Type your suggestion or idea here</label>
+                    <textarea ng-model="user.biography" columns="1" maxlength="100" md-maxlength="100"></textarea>
+            </md-input-container>
+            <md-card-actions layout="row" layout-align="center center">
+              <md-button class="md-raised md-primary"><span class="fa fa-lightbulb-o"></span> Submit</md-button>
+            </md-card-actions>
+        </md-card>
+    </div>
+</div>
 
-</body>
-</html>
+<div class="container">
+    <md-card layout-gt-sm="columns">
+        <md-toolbar>
+            <md-card-content layout="row" flex layout-align="center center">
+                <span class="claim">I think we should go home</span>
+            </md-card-content>
+        </md-toolbar>
+        <md-toolbar flex-gt-sm="50" class="md-dark text-center">
+            <div class="score"><span>50</span></div>
+            <md-card-actions layout="row" layout-align="center center">
+              <md-button class="md-raised md-primary"><span class="fa fa-thumbs-up"></span> Up</md-button>
+              <md-button class="md-raised md-primary md-hue-2"><span class="fa fa-thumbs-down"></span> Down</md-button>
+            </md-card-actions>
+        </md-toolbar>
+    </md-card>
+    <md-card layout-gt-sm="columns">
+        <md-toolbar>
+            <md-card-content layout="row" flex layout-align="center center">
+                <span class="claim">This is something lorem ipsum would say when asked what is lorem ipsum something else in this box...</span>
+            </md-card-content>
+        </md-toolbar>
+        <md-toolbar flex-gt-sm="50" class="md-dark text-center">
+            <div class="score"><span>50</span></div>
+            <md-card-actions layout="row" layout-align="center center">
+              <md-button class="md-raised md-primary"><span class="fa fa-thumbs-up"></span> Up</md-button>
+              <md-button class="md-raised md-primary md-hue-2"><span class="fa fa-thumbs-down"></span> Down</md-button>
+            </md-card-actions>
+        </md-toolbar>
+    </md-card>
+</div>
