--- a/RedBox/app/views/Suggestions.html
+++ b/RedBox/app/views/Suggestions.html
@@ -13,6 +13,21 @@
 </div>
 
 <div class="container">
+    <md-card layout="row">
+        <md-toolbar class="md-btn-group" flex="50" layout="row"  layout-align="center center">
+            <md-button class="md-primary active md-hue-2"><span class="fa fa-thumbs-down"></span> New</md-button>
+            <md-button class="md-primary md-hue-2"><span class="fa fa-thumbs-down"></span> Popular</md-button>
+            <md-button class="md-primary md-hue-2"><span class="fa fa-thumbs-down"></span> Archived</md-button>
+        </md-toolbar>
+        <md-toolbar class="md-btn-group md-accent" flex="50" layout="row" layout-align="center center">
+            <md-button class="md-primary active md-hue-2"><span class="fa fa-thumbs-down"></span> Down</md-button>
+            <md-button class="md-primary md-hue-2"><span class="fa fa-thumbs-down"></span> Down</md-button>
+            <md-button class="md-primary md-hue-2"><span class="fa fa-thumbs-down"></span> Down</md-button>
+        </md-toolbar>
+    </md-card>
+    <div class="clearfix"></div>
+    
+
     <md-card layout-gt-sm="columns">
         <md-toolbar>
             <md-card-content layout="row" flex layout-align="center center">
