--- a/RedBox/app/views/Suggestions.html
+++ b/RedBox/app/views/Suggestions.html
@@ -13,21 +13,18 @@
 </div>
 
 <div class="container">
-    <md-card layout="row">
-        <md-toolbar class="md-btn-group" flex="50" layout="row"  layout-align="center center">
-            <md-button class="md-primary active md-hue-2"><span class="fa fa-thumbs-down"></span> New</md-button>
-            <md-button class="md-primary md-hue-2"><span class="fa fa-thumbs-down"></span> Popular</md-button>
-            <md-button class="md-primary md-hue-2"><span class="fa fa-thumbs-down"></span> Archived</md-button>
+    <div layout-gt-sm="row">
+        <md-toolbar class="md-whiteframe-3dp md-btn-group md-accent" flex layout="row" layout-margin layout-align="left top">
+            <md-button class="md-raised md-button" ng-disabled="true"><span class="fa fa-certificate"></span> New</md-button>
+            <md-button class=""><span class="fa fa-fire"></span> Popular</md-button>
+            <md-button class=""><span class="fa fa-archive"></span> Archived</md-button>
         </md-toolbar>
-        <md-toolbar class="md-btn-group md-accent" flex="50" layout="row" layout-align="center center">
-            <md-button class="md-primary active md-hue-2"><span class="fa fa-thumbs-down"></span> Down</md-button>
-            <md-button class="md-primary md-hue-2"><span class="fa fa-thumbs-down"></span> Down</md-button>
-            <md-button class="md-primary md-hue-2"><span class="fa fa-thumbs-down"></span> Down</md-button>
+        <md-toolbar class="md-whiteframe-3dp md-btn-group md-accent" flex layout="row" layout-margin layout-align="left top">
+            <md-button class="md-raised md-button" ng-disabled="true"><span class="fa fa-calendar-o"></span> Week</md-button>
+            <md-button class=""><span class="fa fa-calendar-times-o"></span> Month</md-button>
+            <md-button class=""><span class="fa fa-calendar"></span> All-time</md-button>
         </md-toolbar>
-    </md-card>
-    <div class="clearfix"></div>
-    
-
+    </div>
     <md-card layout-gt-sm="columns">
         <md-toolbar>
             <md-card-content layout="row" flex layout-align="center center">
@@ -37,8 +34,8 @@
         <md-toolbar flex-gt-sm="50" class="md-dark text-center">
             <div class="score"><span>50</span></div>
             <md-card-actions layout="row" layout-align="center center">
-              <md-button class="md-raised md-primary"><span class="fa fa-thumbs-up"></span> Up</md-button>
-              <md-button class="md-raised md-primary md-hue-2"><span class="fa fa-thumbs-down"></span> Down</md-button>
+              <md-button class="md-raised md-accent"><span class="fa fa-thumbs-up"></span> Up</md-button>
+              <md-button class="md-raised md-primary"><span class="fa fa-thumbs-down"></span> Down</md-button>
             </md-card-actions>
         </md-toolbar>
     </md-card>
@@ -51,8 +48,8 @@
         <md-toolbar flex-gt-sm="50" class="md-dark text-center">
             <div class="score"><span>50</span></div>
             <md-card-actions layout="row" layout-align="center center">
-              <md-button class="md-raised md-primary"><span class="fa fa-thumbs-up"></span> Up</md-button>
-              <md-button class="md-raised md-primary md-hue-2"><span class="fa fa-thumbs-down"></span> Down</md-button>
+              <md-button class="md-raised md-accent"><span class="fa fa-thumbs-up"></span> Up</md-button>
+              <md-button class="md-raised md-primary"><span class="fa fa-thumbs-down"></span> Down</md-button>
             </md-card-actions>
         </md-toolbar>
     </md-card>
