--- a/RedBox/Content/Main.css
+++ b/RedBox/Content/Main.css
@@ -953,6 +953,46 @@ p {
     color: rgba(255,255,255,.91);
 }
 
+dl {
+}
+
+dt {
+    font-size: 22px;
+    font-weight: 300;
+}
+
+dd {
+    font-size: 16px;
+    color: rgba(255,255,255,.91);
+}
+
+
+
+.animate-show {
+  line-height: 20px;
+  opacity: 1;
+  padding: 10px;
+  border-top: 1px solid black;
+  background: white;
+}
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
+  transition: all linear 0.5s;
+}
+
+.animate-show.ng-hide {
+  line-height: 0;
+  opacity: 0;
+  padding: 0 10px;
+}
+
+.check-element {
+  padding: 10px;
+  border: 1px solid black;
+  background: white;
+}
+
+
 @media screen and (max-width: 767px) {
     .callout-box .md-block {
          padding-top: 32px;
