--- a/RedBox/app/views/EOM.html
+++ b/RedBox/app/views/EOM.html
@@ -53,8 +53,34 @@
 		                <span class="fa fa-trophy fa-5x "></span>
 		            </md-card-content>
 					<md-card-actions layout-padding layout="row" layout-align="left center">
-					  <md-button><span class="fa fa-chevron-down"></span> Details</md-button>
+					  <md-button ng-click="hideDetails = !hideDetails"><span ng-show="!hideDetails" class="fa fa-chevron-down"></span><span ng-show="hideDetails" class="fa fa-chevron-up"></span> Details</md-button>
 					</md-card-actions>
+					<md-toolbar ng-show="hideDetails" class="md-dark animate-show animate-hide">
+						<md-card-content layout="row" class="layout-align-space-between-center" flex layout-align="left center" >
+							<dl>
+								<dt>Roxana Plaian - <span class="fa fa-thumbs-up"></span>3</dt>
+								<dd>
+									<ul>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+									</ul>
+								</dd>
+								<dt>Roxana Plaian - <span class="fa fa-thumbs-up"></span>3</dt>
+								<dd>
+									<ul>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+									</ul>
+								</dd>
+							</dl>
+			            </md-card-content>
+					</md-toolbar>
 				</md-toolbar>
 			</md-card>
 			<md-card>
@@ -68,8 +94,34 @@
 		                <span class="fa fa-trophy fa-5x "></span>
 		            </md-card-content>
 					<md-card-actions layout-padding layout="row" layout-align="left center">
-					  <md-button><span class="fa fa-chevron-down"></span> Details</md-button>
+					  <md-button ng-click="hideDetails = !hideDetails"><span ng-show="!hideDetails" class="fa fa-chevron-down"></span><span ng-show="hideDetails" class="fa fa-chevron-up"></span> Details</md-button>
 					</md-card-actions>
+					<md-toolbar ng-show="hideDetails" class="md-dark animate-show animate-hide">
+						<md-card-content layout="row" class="layout-align-space-between-center" flex layout-align="left center" >
+							<dl>
+								<dt>Roxana Plaian - <span class="fa fa-thumbs-up"></span>3</dt>
+								<dd>
+									<ul>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+									</ul>
+								</dd>
+								<dt>Roxana Plaian - <span class="fa fa-thumbs-up"></span>3</dt>
+								<dd>
+									<ul>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+									</ul>
+								</dd>
+							</dl>
+			            </md-card-content>
+					</md-toolbar>
 				</md-toolbar>
 			</md-card>
 			<md-card>
@@ -83,8 +135,34 @@
 		                <span class="fa fa-trophy fa-5x "></span>
 		            </md-card-content>
 					<md-card-actions layout-padding layout="row" layout-align="left center">
-					  <md-button><span class="fa fa-chevron-down"></span> Details</md-button>
+					  <md-button ng-click="hideDetails = !hideDetails"><span ng-show="!hideDetails" class="fa fa-chevron-down"></span><span ng-show="hideDetails" class="fa fa-chevron-up"></span> Details</md-button>
 					</md-card-actions>
+					<md-toolbar ng-show="hideDetails" class="md-dark animate-show animate-hide">
+						<md-card-content layout="row" class="layout-align-space-between-center" flex layout-align="left center" >
+							<dl>
+								<dt>Roxana Plaian - <span class="fa fa-thumbs-up"></span>3</dt>
+								<dd>
+									<ul>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+									</ul>
+								</dd>
+								<dt>Roxana Plaian - <span class="fa fa-thumbs-up"></span>3</dt>
+								<dd>
+									<ul>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+										<li>Because she's awesome</li>
+									</ul>
+								</dd>
+							</dl>
+			            </md-card-content>
+					</md-toolbar>
 				</md-toolbar>
 			</md-card>
 		</div>
