--- a/RedBox/Content/Main.css
+++ b/RedBox/Content/Main.css
@@ -993,6 +993,130 @@ dd {
 }
 
 
+
+
+
+
+/* Login thingy */
+
+.login-div.checking {
+    z-index: 10000;
+    height: auto;
+    padding: 0;
+}
+
+.login-div.checking .md-toolbar {
+    margin: 0;
+}
+
+.login-div.checking img {
+    position: relative;
+    z-index: 9999;
+    background: transparent;
+}
+
+/* logging-in Bar */
+.logging-in {
+  position: relative;
+  height: 163px;
+  display: block;
+  width: 100%;
+  background-color: #ffcdd2;
+  border-radius: 2px;
+  background-clip: padding-box;
+  margin: 0;
+  overflow: hidden; }
+  .logging-in .indeterminate {
+    background-color: #f44336; }
+    .logging-in .indeterminate:before {
+      content: '';
+      position: absolute;
+      opacity: .51;
+      background-color: #ffffff;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      will-change: left, right;
+      -webkit-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+              animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite; }
+    .logging-in .indeterminate:after {
+      content: '';
+      position: absolute;
+      background-color: #ffffff;
+      opacity: .27;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      will-change: left, right;
+      -webkit-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+              animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+      -webkit-animation-delay: 1.15s;
+              animation-delay: 1.15s; }
+
+@-webkit-keyframes indeterminate {
+  0% {
+    left: -35%;
+    right: 100%; }
+  60% {
+    left: 100%;
+    right: -90%; }
+  100% {
+    left: 100%;
+    right: -90%; } }
+@keyframes indeterminate {
+  0% {
+    left: -35%;
+    right: 100%; }
+  60% {
+    left: 100%;
+    right: -90%; }
+  100% {
+    left: 100%;
+    right: -90%; } }
+@-webkit-keyframes indeterminate-short {
+  0% {
+    left: -200%;
+    right: 100%; }
+  60% {
+    left: 107%;
+    right: -8%; }
+  100% {
+    left: 107%;
+    right: -8%; } }
+@keyframes indeterminate-short {
+  0% {
+    left: -200%;
+    right: 100%; }
+  60% {
+    left: 107%;
+    right: -8%; }
+  100% {
+    left: 107%;
+    right: -8%; } }
+
+/* End Login thingy */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width: 767px) {
     .callout-box .md-block {
          padding-top: 32px;
