--- a/RedBox/Content/Main.css
+++ b/RedBox/Content/Main.css
@@ -993,7 +993,9 @@ dd {
 }
 
 
-
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak, .ng-hide:not(.ng-hide-animate) {
+    display: none !important;
+}
 
 
 
