--- a/RedBox/app/views/Events.html
+++ b/RedBox/app/views/Events.html
@@ -1,9 +1,74 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<div class="callout-box">
+    <div class="container">
+        <md-card layout-sm="columns" layout-gt-sm="columns" layout-padding>
+            <md-input-container class="md-block" flex>
+                    <label>Call out people to a place or event</label>
+                    <textarea ng-model="user.biography" columns="1" maxlength="200" md-maxlength="200"></textarea>
+            </md-input-container>
+            <md-card-actions layout="row" layout-align="center center">
+              <md-button class="md-raised md-primary"><span class="fa fa-rocket"></span> Submit</md-button>
+            </md-card-actions>
+        </md-card>
+    </div>
+</div>
+<div class="container">
+    <md-card>
+        <md-toolbar class="md-primary">
+            <md-card-content layout="row" class="layout-align-space-between-center" flex layout-align="left center" >
+                <div>
+                    <strong>Roxana Plaian</strong>
+                    <br>
+                    <p>We should like totally go to the mall cuz it's like the awesome thing to do.</p>
+                </div>
+            </md-card-content>
+            <md-card-actions layout-padding layout-gt-sm="row" layout-align="center center" class="layout-align-space-between-center text-center">
+                <md-toolbar class="md-whiteframe-3dp md-btn-group md-accent" layout-xs="columns" layout-sm="row" layout-gt-sm="row" layout-margin layout-align="left top">
+                    <md-button class="md-raised md-button" ng-disabled="true"><span class="fa fa-play-circle"></span> Going</md-button>
+                    <md-button class=""><span class="fa fa-pause-circle"></span> Tentative</md-button>
+                    <md-button class=""><span class="fa fa-stop-circle"></span> Not Now</md-button>
+                </md-toolbar>
+                <md-button ng-click="hideDetails = !hideDetails"><span ng-show="!hideDetails" class="fa fa-chevron-down"></span><span ng-show="hideDetails" class="fa fa-chevron-up"></span> Details</md-button>
+            </md-card-actions>
+            <md-toolbar ng-show="hideDetails" class="md-dark animate-show animate-hide">
+                <md-card-content layout-gt-sm="row" flex layout-align="left center" >
+                    <dl flex>
+                        <dt>Going</dt>
+                        <dd>
+                            <ol>
+                                <li>Roxana Plaian</li>
+                                <li>Roxana Plaian</li>
+                                <li>Roxana Plaian</li>
+                                <li>Roxana Plaian</li>
+                                <li>Roxana Plaian</li>
+                            </ol>
+                        </dd>
+                    </dl>
+                    <dl flex>
+                        <dt>Tentative</dt>
+                        <dd>
+                            <ol>
+                                <li>Roxana Plaian</li>
+                                <li>Roxana Plaian</li>
+                                <li>Roxana Plaian</li>
+                                <li>Roxana Plaian</li>
+                                <li>Roxana Plaian</li>
+                            </ol>
+                        </dd>
+                    </dl>
+                    <dl flex>
+                        <dt>Not Now</dt>
+                        <dd>
+                            <ol>
+                                <li>Roxana Plaian</li>
+                                <li>Roxana Plaian</li>
+                                <li>Roxana Plaian</li>
+                                <li>Roxana Plaian</li>
+                                <li>Roxana Plaian</li>
+                            </ol>
+                        </dd>
+                    </dl>
+                </md-card-content>
+            </md-toolbar>
+        </md-toolbar>
+    </md-card>
+</div>
