--- a/RedBox/app/views/Suggestions.html
+++ b/RedBox/app/views/Suggestions.html
@@ -14,12 +14,12 @@
 
 <div class="container">
     <div layout-gt-sm="row">
-        <md-toolbar class="md-whiteframe-3dp md-btn-group md-accent" flex layout="row" layout-margin layout-align="left top">
+        <md-toolbar class="md-whiteframe-3dp md-btn-group md-accent" flex layout-xs="columns" layout-sm="row" layout-gt-sm="row" layout-margin layout-align="left top">
             <md-button class="md-raised md-button" ng-disabled="true"><span class="fa fa-certificate"></span> New</md-button>
             <md-button class=""><span class="fa fa-fire"></span> Popular</md-button>
             <md-button class=""><span class="fa fa-archive"></span> Archived</md-button>
         </md-toolbar>
-        <md-toolbar class="md-whiteframe-3dp md-btn-group md-accent" flex layout="row" layout-margin layout-align="left top">
+        <md-toolbar class="md-whiteframe-3dp md-btn-group md-accent" flex layout-xs="columns" layout-sm="row" layout-gt-sm="row" layout-margin layout-align="left top">
             <md-button class="md-raised md-button" ng-disabled="true"><span class="fa fa-calendar-o"></span> Week</md-button>
             <md-button class=""><span class="fa fa-calendar-times-o"></span> Month</md-button>
             <md-button class=""><span class="fa fa-calendar"></span> All-time</md-button>
