--- a/RedBox/app/views/Suggestions.html
+++ b/RedBox/app/views/Suggestions.html
@@ -38,6 +38,6 @@
                 <md-button class="md-raised md-primary" ng-click="vote(suggestion.id, false)"><span class="fa fa-thumbs-down"></span> Down</md-button>
             </md-card-actions>
         </md-toolbar>
-        <md-button class="" ng-if="!suggestion.achived" ng-click="archiveSuggestion(suggestion.id)"><span class="fa fa-fire"></span> Archive</md-button>
+        <md-button class="" ng-if="!suggestion.archived" ng-click="archiveSuggestion(suggestion.id)"><span class="fa fa-fire"></span> Archive</md-button>
     </md-card>
 </div>
