--- a/RedBox/app/views/Suggestions.html
+++ b/RedBox/app/views/Suggestions.html
@@ -33,7 +33,7 @@
         </md-toolbar>
         <md-toolbar flex-gt-sm="50" class="md-dark text-center">
             <div class="score"><span>{{(suggestion.upVote - suggestion.downVote)>-1?suggestion.upVote - suggestion.downVote:0}}</span></div>
-            <md-card-actions layout="row" layout-align="center center">
+            <md-card-actions layout="row" layout-align="center center" ng-if="!suggestion.hasVoted">
                 <md-button class="md-raised md-accent" ng-click="vote(suggestion.id, true)"><span class="fa fa-thumbs-up"></span> Up</md-button>
                 <md-button class="md-raised md-primary" ng-click="vote(suggestion.id, false)"><span class="fa fa-thumbs-down"></span> Down</md-button>
             </md-card-actions>
