--- a/RedBox/app/views/Events.html
+++ b/RedBox/app/views/Events.html
@@ -58,6 +58,8 @@
                 </md-card-content>
             </md-toolbar>
         </md-toolbar>
-        <md-button class="" ng-if="!event.archived" ng-click="archiveEvent(event.id)"><span class="fa fa-fire"></span> Archive</md-button>
+        <md-card-actions ng-if="!event.archived" layout-padding layout-gt-sm="columns" flex layout-align="end center">
+            <md-button ng-if="!event.archived"  ng-click="archiveEvent(event.id)" ><span class="fa fa-archive"></span> Archive</md-button>
+        </md-card-actions>
     </md-card>
 </div>
