--- a/RedBox/app/views/Suggestions.html
+++ b/RedBox/app/views/Suggestions.html
@@ -27,9 +27,12 @@
     </div>
     <md-card layout-gt-sm="columns" ng-repeat="suggestion in suggestions">
         <md-toolbar>
-            <md-card-content layout="row" flex layout-align="center center">
+            <md-card-content layout="row" flex layout-align="left center">
                 <span class="claim">{{suggestion.description}}</span>
             </md-card-content>
+            <md-card-actions layout="row" layout-align="left center">
+                <md-button ng-if="!suggestion.archived" ng-click="archiveSuggestion(suggestion.id)" ><span class="fa fa-archive"></span> Archive</md-button>
+            </md-card-actions>
         </md-toolbar>
         <md-toolbar flex-gt-sm="50" class="md-dark text-center">
             <div class="score"><span>{{(suggestion.upVote - suggestion.downVote)>-1?suggestion.upVote - suggestion.downVote:0}}</span></div>
@@ -37,7 +40,7 @@
                 <md-button class="md-raised md-accent" ng-click="vote(suggestion.id, true)"><span class="fa fa-thumbs-up"></span> Up</md-button>
                 <md-button class="md-raised md-primary" ng-click="vote(suggestion.id, false)"><span class="fa fa-thumbs-down"></span> Down</md-button>
             </md-card-actions>
+            <md-progress-linear class="md-accent" md-mode="indeterminate"></md-progress-linear>
         </md-toolbar>
-        <md-button class="" ng-if="!suggestion.archived" ng-click="archiveSuggestion(suggestion.id)"><span class="fa fa-fire"></span> Archive</md-button>
     </md-card>
 </div>
