--- a/RedBox/app/views/Suggestions.html
+++ b/RedBox/app/views/Suggestions.html
@@ -34,13 +34,13 @@
                 <md-button ng-if="!suggestion.archived" ng-click="archiveSuggestion(suggestion.id)" ><span class="fa fa-archive"></span> Archive</md-button>
             </md-card-actions>
         </md-toolbar>
-        <md-toolbar flex-gt-sm="50" class="md-dark text-center">
+        <md-toolbar flex-gt-sm="50" layout-align="center stretch" class="md-dark text-center">
             <div class="score"><span>{{(suggestion.upVote - suggestion.downVote)>-1?suggestion.upVote - suggestion.downVote:0}}</span></div>
             <md-card-actions layout="row" layout-align="center center" ng-if="!suggestion.hasVoted">
                 <md-button class="md-raised md-accent" ng-click="vote(suggestion.id, true)"><span class="fa fa-thumbs-up"></span> Up</md-button>
                 <md-button class="md-raised md-primary" ng-click="vote(suggestion.id, false)"><span class="fa fa-thumbs-down"></span> Down</md-button>
+                <md-progress-linear class="md-accent" md-mode="indeterminate"></md-progress-linear>
             </md-card-actions>
-            <md-progress-linear class="md-accent" md-mode="indeterminate"></md-progress-linear>
         </md-toolbar>
     </md-card>
 </div>
