--- a/RedBox/Content/Main.css
+++ b/RedBox/Content/Main.css
@@ -852,7 +852,7 @@ th h2 {
 }
 
 .score {
-    margin: 32px 0 16px 0;
+    margin: 16px 0;
     display: inline-block;
     line-height: 62px;
     font-size: 62px;
