--- a/RedBox/app/views/EOM.html
+++ b/RedBox/app/views/EOM.html
@@ -2,7 +2,7 @@
 	<div layout-gt-sm="columns">
 	    <div flex-gt-sm="40">
 	        <!--<span class="fa fa-thumbs-up"></span>{{currentNumberOfVotes}}-->
-	        <button ng-click="stopVote()">STOP VOTE!</button>
+	        <md-button class="md-raised md-primary" ng-click="stopVote()"><span class="fa fa-flag"></span> END VOTING</md-button class="md-primary">
 	        <md-card ng-hide="hasVoted">
 	            <md-card-content layout-align="top left">
 	                <h2>{{currentEom.date | date : 'MMMM yyyy'}}</h2>
