--- a/RedBox/app/views/EOM.html
+++ b/RedBox/app/views/EOM.html
@@ -45,7 +45,7 @@
 	        </md-card>
 	    </div>
 	    <div flex>
-	        <md-card ng-repeat="eom in eoms">
+	        <md-card ng-repeat="eom in eoms track by $index">
 	            <md-toolbar class="md-primary">
 	                <md-card-content layout="row" class="layout-align-space-between-center" flex layout-align="left center">
 	                    <div>
@@ -64,7 +64,7 @@
 	                            <dt>{{votes.userFullName}} <span class="fa fa-thumbs-up"></span>{{votes.votes}}</dt>
 	                            <dd>
 	                                <ul >
-	                                    <li ng-repeat="r in votes.reasons">{{r}}</li>
+	                                    <li ng-repeat="r in votes.reasons track by $index">{{r}}</li>
 	                                </ul>
 	                            </dd>
 	                        </dl>
